-*- text -*-

* Log-logistic distribution built in to flexsurvreg, and distribution
  functions provided.

* Bug fix in tcovs option in semi-Markov model simulation 


Version 0.5 (2014-09-22)
-----------

* Major new release, so version number bumped from 0.3 to 0.5.

* New package vignettes: a user guide and a vignette of examples.

* Development moved from r-forge to
  https://github.com/chjackson/flexsurv-dev.

Spline models and ancillary covariates:

* Major rewrite of flexsurvspline.  This now works by calling
  flexsurvreg with a custom distribution written dynamically.  Models
  can now include covariate effects that vary as spline functions of
  time, by including covariates on "gamma1" or on any further
  parameters.

* New argument "anc" to flexsurvreg, as an alternative and preferred
  way of modelling covariates on ancillary parameters.

* New general utility "unroll.function" which converts a function with
  matrix arguments to the equivalent function with vector arguments.
  The new flexsurvspline works by unrolling "dsurvspline".

* Quantile, random number, hazard and cumulative hazard functions for
  spline distribution.

* Autogeneration of initial values for flexsurvspline now accounts for
  left-truncation. Thanks to Ana Borges for the report.

Other new modelling features:

* Several utilities for parametric multi-state modelling, including
  transition probabilities and simulation ("pmatrix.fs", "totlos.fs",
  "sim.fmsm","pmatrix.simfs", "totlos.simfs").  An "msfit.flexsurvreg"
  method also gives cumulative incidences in the format of the
  "mstate" package.

* Interval censoring supported in the Surv() response.

* Relative survival models, using the "bhazard" argument to
  flexsurvreg to specify the expected mortality rate.

* flexsurvreg now uses survreg internally to fit Weibull, exponential
  and log-normal models, unless there is left-truncation.

Custom distributions:

* Custom distributions can be defined through the hazard function.